# pyqtgraph_extensions

./: .gitignore  .hgignore  .python-version  LICENSE.txt  MANIFEST.IN  README.md  conda_test_env.yml  pyproject.toml  pytest.ini  setup.py  tox.ini
manual_checks/: check_colorbar.py
pyqtgraph_extended/: __init__.py
pyqtgraph_extended/opengl/: __init__.py
pyqtgraph_extensions/: AlignedPlot.py  AlignedPlotItem.py  AxisItem.py  GraphicsLayout.py  __init__.py  functions.py  hook-pyqtgraph_extensions.py  misc.py  offcuts.py
pyqtgraph_extensions/examples/: AlignedPlotItem.py  ColorBarItem.py  demo_axis_alignment.py  demo_color_bar.py  demo_misc.py  demo_right_top_axes.py  miscellaneous.py  right_top_axes.py
pyqtgraph_extensions/opengl/: __init__.py
pyqtgraph_extensions/opengl/test/: test.py  test_pyqtgraph_extensions_opengl.py
pyqtgraph_extensions/test/: test_ImageItem.py  test_all.py  test_functions.py  try_deleting.py
pyqtgraph_recipes/: __init__.py  jet_white.txt  jet_white_clip.txt  parula.txt  parula_white.txt  pyqtgraph_recipes.py
pyqtgraph_recipes/test/: test_recipes.py
