[tool.poetry]
name = "pyqtgraph_extensions"
version = "0.5.2"
description = "Various extensions for pyqtgraph."
authors = ["Dane Austin <dane_austin@fastmail.com.au>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/draustin/pyqtgraph_extensions"
packages = [
    { include = "pyqtgraph_extended" },
    { include = "pyqtgraph_extensions" },
    { include = "pyqtgraph_recipes" }
]

[tool.poetry.dependencies]
python = "^3.6"
pyqtgraph = "0.11.0"
PyQt5 = "^5.14.2"
pyopengl = "^3.1.5"
mathx = "^0.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
pytest-qt = "^3.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
