[tool.poetry]
name = "pyqtgraph_extensions"
version = "0.5.8"
description = "Various extensions for pyqtgraph."
authors = ["Dane Austin <dane_austin@fastmail.com.au>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/draustin/pyqtgraph_extensions"
packages = [
    { include = "pyqtgraph_extended" },
    { include = "pyqtgraph_extensions" },
    { include = "pyqtgraph_recipes" }
]

[tool.poetry.dependencies]
python = "^3.7"
# 2021-10-07 trouble getting poetry to believe that pyqtgraph_extensions was compatible with pyqtgraph pyqtgraph 0.12.
# Might be caused by case of caret https://nodesource.com/blog/semver-tilde-and-caret/.
pyqtgraph = ">=0.11"
PyQt5 = "^5.14.2"
pyopengl = "^3.1.5"
mathx = ">=0.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
pytest-qt = "^3.3.0"

[tool.poetry.plugins."pyinstaller40"]
hook-dirs = "pyqtgraph_extensions:get_pyinstaller_hook_dirs"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
